--- a/android/ijkplayer/ijkplayer-example/src/main/res/menu/menu_player.xml
+++ b/android/ijkplayer/ijkplayer-example/src/main/res/menu/menu_player.xml
@@ -8,6 +8,10 @@
         android:title="@string/toggle_player"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_toggle_snapshot"
+        android:title="@string/toggle_snapshot"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_toggle_render"
         android:title="@string/toggle_render"
         app:showAsAction="ifRoom" />
